--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
+    <title>数量化理論第2類</title>
+    <script type="text/javascript" src="src/lib/matrix.js"></script>
 </head>
 <body>
     <div id="app"></div>
